--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.0",
+    "shortid": "^2.2.14",
     "skeleton-css": "^2.0.4"
   },
   "scripts": {
